--- a/src/main/resources/public/Admin.html
+++ b/src/main/resources/public/Admin.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <!-- Element UI -->
-        <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+        <link rel="stylesheet" href="https://unpkg.com/element-ui@2.13.0/lib/theme-chalk/index.css">
         <link rel="stylesheet" href="admin.css">
         <title>personal-blog-admin</title>
     </head>
@@ -19,9 +19,9 @@
                     <el-tab-pane label="定时任务补偿">定时任务补偿</el-tab-pane>
                 </el-tabs>
             </transition>
-            <div  v-show="!showAdmin" style="height:100%; width:100%; position: absolute;">
+            <div  v-if="!showAdmin" style="height:100%; width:100%; position: absolute;">
                 <login-page></login-page>
-                <!-- <el-card id="loginPage" class="box-card">
+                <el-card id="loginPage" class="box-card">
                     <div slot="header" class="clearfix" style="font-size: 18px;">
                         登录管理系统
                     </div>
@@ -36,9 +36,9 @@
                             v-model="password"
                             clearable>
                         </el-input>
-                        <el-button type="primary" v-on:click="showAdmin = true">登录</el-button>
+                        <el-button type="primary" v-on:click="login()">登录</el-button>
                     </div>
-                </el-card> -->
+                </el-card>
             </div>
         </div>
     </body>
@@ -46,43 +46,25 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
     <!-- 生产环境版本，优化了尺寸和速度 -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://unpkg.com/element-ui@2.13.0/lib/index.js"></script>
     <script>
         new Vue({
           el: '#app',
           data: function() {
             return { 
-                showAdmin: false
+                showAdmin: false,
+                userName: null,
+                password: null
             }
+          },
+          methods: {
+              login: function() {
+                  console.info('Login Function');
+
+                  this.showAdmin = true
+              }
           }
         });
-
-        Vue.component('login-page', {
-            data: function() {
-                return { 
-                    userName: null,
-                    password: null
-                }
-            },
-            template: '<el-card id="loginPage" class="box-card">'+
-                    '<div slot="header" class="clearfix" style="font-size: 18px;">'+
-                        '登录管理系统'+
-                    '</div>'+
-                    '<div>'+
-                        '<el-input style="padding-bottom: 15px;"'+
-                            'placeholder="请输入用户名"'+
-                            'v-model="userName"'+
-                            'clearable>'+
-                        '</el-input>'+
-                        '<el-input style="padding-bottom: 15px;"'+
-                            'placeholder="请输入密码"'+
-                            'v-model="password"'+
-                            'clearable>'+
-                        '</el-input>'+
-                        '<el-button type="primary" v-on:click="showAdmin = true">登录</el-button>'+
-                    '</div>'+
-                '</el-card>'
-        })
     </script>
 </html>
 
