--- a/admin/Admin.html
+++ b/admin/Admin.html
@@ -132,7 +132,7 @@
             el: '#app',
             data: function() {
                 return { 
-                    showAdmin: false,
+                    showAdmin: true,
                     userName: null,
                     password: null
                 }
