--- a/src/main/resources/public/Admin.html
+++ b/src/main/resources/public/Admin.html
@@ -53,8 +53,8 @@
     <!-- AXIOS -->
 
     <!-- highlight.js -->
-    <script src="https://cdn.jsdelivr.net/npm/highlight.js@9.17.0/lib/highlight.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@9.17.0/styles/darcula.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/darcula.min.css    ">
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
     <!-- highlight.js -->
 
     <!-- quill.js -->
